<resources>
    <string name="app_name">ETransportAndroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Home screen -->
    <string name="brand_name">ETransport</string>


    <!-- Transport Booking -->
    <string name="transport_title">Transport Booking</string>
    <string name="transport_location">Transport Location</string>
    <string name="transport_type">Type of Transport</string>
    <string name="transport_to">to</string>

    <string name="transport_from_name">Amsterdam</string>
    <string name="transport_to_name">Rotterdam</string>
    <string name="transport_type_of_transport">X</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
</resources>